--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="tool-bar"> 
-            <ul>
+            <ul class="tool-bar">
                 <li id="profile">
                     <a href="#"><img src="images/user.png" alt="user"></a>
                 </li>
@@ -19,6 +19,7 @@
                 <li class="head-text"><a href="#">Images</a></li>
                 <li class="head-text"><a href="#">Gmail</a></li>
             </ul>
+            
         </div>
     </header>
 
